--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                     <div class="col-md-11 offset-md-1">
                         <div class="row">
                             <div class="col-md-6 developers">
-                                <img src="static/obse_logo.svg" />
+                                <img src="static/obse_logo.png" />
                                 <p class="span-tdy-width-1">Картографічні матеріали підготовлено за підтримки проєкту 
                                     «Підтримка належного врядування в місцевих громадах, як складової реформи децентралізації»
                                     Координатора проєктів ОБСЄ в Україні</p>
