--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                                 <img src="static/logo_min_ukr.png" />
                             </div>
                             <div class="col-md-4 col-7">
-                                <img src="static/osce_logo.jpg" />
+                                <img src="static/osce_logo.png" />
                             </div>
                             <div class="col-md-4 col-5 tdu-logo">
                                 <img src="static/TDU.png" />
