--- a/index.html
+++ b/index.html
@@ -397,10 +397,10 @@
                 <div class="col-md-9 order-md-1 order-sm-2">
                     <div class="footer-logo">
                         <div class="row">
-                            <div class="col-md-4">
+                            <div class="col-md-4 logo_min_ukr">
                                 <img src="static/logo_min_ukr.png" />
                             </div>
-                            <div class="col-md-4 col-7">
+                            <div class="col-md-4 col-7 obse_logo">
                                 <img src="static/obse_logo.png" />
                             </div>
                             <div class="col-md-4 col-5 tdu-logo">
