--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
                     <div class="navbar-nav">
                         <a class="nav-item nav-link" href="#mapa">МАПА</a>
                         <a class="nav-item nav-link" href="#atlas">АТЛАС</a>
-                        <a class="nav-item nav-link" href="#download-section">ЗАВАНТАЖИТИ</a>
-                        <a class="nav-item nav-link" href="#developers">РОЗРОБНИКИ</a>
+                        <a class="nav-item nav-link" href="#download-section">МЕЖІ АТУ</a>
                     </div>
                 </div>
             </nav>
@@ -67,10 +66,7 @@
                             <a href="#atlas">АТЛАС</a>
                         </li>
                         <li>
-                            <a href="#download-section">ЗАВАНТАЖИТИ</a>
-                        </li>
-                        <li>
-                            <a href="#developers">РОЗРОБНИКИ</a>
+                            <a href="#download-section">МЕЖІ АТУ</a>
                         </li>
                     </ul>
                 </div>
@@ -95,7 +91,6 @@
                             В середині 2020 року Україна отримала новий адміністративно-територіальний устрій,
                             межі одиниць якого ви можете завантажити у два кліки.
                         </p>
-                        <a class="download-file" href="#svg-object"><button class="download-button" id="download-main-button">ЗАВАНТАЖИТИ АТЛАС</button></a>
                     </div>
                     <img src="static/ukraine-main.png" id="ukraine-main-img" />
                 </div>
@@ -183,7 +178,7 @@
                                 <div class="dark-circle" id="white-circle-id"></div>
                                 <div class="light-circle download-block-mobile" style="padding-right:30px;width:268px;height:268px">
                                     <p class="atlas-novogo-atu">
-                                        <b>ЗАВАНТАЖУЙТЕ ІНФОРМАЦІЮ ПРО НОВИЙ АТУ</b>
+                                        <b>Завантажуйте межі одиниць АТУ</b>
                                     </p>
                                 </div>
                             </div>
@@ -300,10 +295,10 @@
                             <div class="col-md-6 col-sm-12">
                                 <div class="ava-item row">
 
-                                    <div class="col-4 item">
+                                    <div class="col-3 item">
                                         <img src="static/pavlo.png" />
                                     </div>
-                                    <div class="col-8">
+                                    <div class="col-9">
                                         <div class="person-title">
                                             <p class="person-name"><b>ПАВЛО ОСТАПЕНКО</b> <br />
                                             <p>керівник проєкту</p>
@@ -313,10 +308,10 @@
                             </div>
                             <div class="col-md-6 col-sm-12">
                                 <div class="ava-item row">
-                                    <div class="col-4 item">
+                                    <div class="col-3 item">
                                         <img src="static/roman.png" />
                                     </div>
-                                    <div class="col-8">
+                                    <div class="col-9">
                                         <div class="person-title">
                                             <p class="person-name"><b>РОМАН ПЕРХАЛЮК</b></p>
                                             <p>картографія</p>
@@ -327,10 +322,10 @@
                             </div>
                             <div class="col-md-6 col-sm-12">
                                 <div class="ava-item row">
-                                    <div class="col-4 item">
+                                    <div class="col-3 item">
                                         <img src="static/oleksandr.png" />
                                     </div>
-                                    <div class="col-8">
+                                    <div class="col-9">
                                         <div class="person-title">
                                             <p class="person-name"><b>ОЛЕКСАНДР БОНЧКОВСЬКИЙ</b></p>
                                             <p>картографія</p>
@@ -341,10 +336,10 @@
                             </div>
                             <div class="col-md-6 col-sm-12">
                                 <div class="ava-item row">
-                                    <div class="col-4 item">
+                                    <div class="col-3 item">
                                         <img src="static/stanislav.png" />
                                     </div>
-                                    <div class="col-8">
+                                    <div class="col-9">
                                         <div class="person-title">
 
                                             <p class="person-name"><b>СТАНІСЛАВ ОСТАПЕНКО</b></p>
@@ -390,8 +385,7 @@
                     <ul class="footer-nav">
                         <li><a href="#mapa">ІНТЕРАКТИВНА МАПА</a></li>
                         <li><a href="#atlas">АТЛАС</a></li>
-                        <li><a href="#download-section">ЗАВАНТАЖИТИ</a></li>
-                        <li><a href="#developers">РОЗРОБНИКИ</a></li>
+                        <li><a href="#download-section">МЕЖІ АТУ</a></li>
                     </ul>
                 </div>
                 <div class="col-md-9 order-md-1 order-sm-2">
