--- a/index.html
+++ b/index.html
@@ -216,13 +216,13 @@
                     <div class="col-md-12 order-1">
                         <div class="row">
                             <div class="col-md-4">
-                                <a class="download-file" href="ADMIN_UKR/ADMIN_1.geojson" download="oblast.geojson"><button class="download-button" id="download-button" disabled>МЕЖІ ОБЛАСТЕЙ</button></a>
+                                <a class="download-file" href="ADMIN_UKR/ADMIN_1.geojson" download="oblast.geojson"><button class="download-button" id="download-button">МЕЖІ ОБЛАСТЕЙ</button></a>
                             </div>
                             <div class="col-md-4">
-                                <a class="download-file" href="ADMIN_UKR/ADMIN_2.geojson" download="rayon.geojson"><button class="download-button" id="download-button" disabled>МЕЖІ НОВИХ РАЙОНІВ</button></a>
+                                <a class="download-file" href="ADMIN_UKR/ADMIN_2.geojson" download="rayon.geojson"><button class="download-button" id="download-button">МЕЖІ НОВИХ РАЙОНІВ</button></a>
                             </div>
                             <div class="col-md-4">
-                                <a class="download-file" href="ADMIN_UKR/ADMIN_3.geojson" download="terhromad.geojson"><button class="download-button" id="download-button" disabled>МЕЖІ ТЕРИТОРІАЛЬНИХ ГРОМАД </button></a>
+                                <a class="download-file" href="ADMIN_UKR/ADMIN_3.geojson" download="terhromad.geojson"><button class="download-button" id="download-button">МЕЖІ ТЕРИТОРІАЛЬНИХ ГРОМАД </button></a>
                             </div>
                         </div>
                     </div>
