--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                 <div class="row">
                     <div class="col-md-12 order-2">
                         <div class="politic-checkbox">
-                            <input type="checkbox" class="check_box" id="checkbox1" style="margin-right:30px">
+                            <input type="checkbox" class="check_box" id="checkbox1" style="margin-right:30px" onclick="enable()">
                             <label for="checkbox1" />
                             <div>
                                 <p class="small-font">* при завантаженні, повідомляю, що ознайомився
